--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,4 @@
 ---
-title: ""
-title-block-style: none
-
 listing:
   contents: posts
   sort: "date desc"
@@ -12,16 +9,16 @@ listing:
 page-layout: full
 title-block-banner: true
 ---
-:::{#landing}
 
-# Welcome! {.unnumbered #welcome}
+# Quantitative Social Science to Shape the Future — Course Notes {.unnumbered #welcome}
 
-Hello and welcome to the roll of lecture notes from current and previous weeks.
+## Winter 2026 {.unnumbered}
 
-Search for something (top right), or browse by category (click a Category to the right).
-
+This blog-style website is home to course notes associated with the
+Winter 2026 online lecture series, _Quantitative Social Science to Shape the
+Future_. Each of the posts has an associated directory in the project
+repository, accessible online:
+[QSS2SF-Course-Notes-Winter-2026](https://github.com/mt-digital/QSS2SF-Course-Notes-Winter-2026).
 
 
 ## Lecture Notes Posts {.unnumbered }
-
-:::
