updates/cleanup/finished Medici network CSV

--- a/posts/identity-coalitions-ergonomics-of-power/index.qmd
+++ b/posts/identity-coalitions-ergonomics-of-power/index.qmd
@@ -163,9 +163,8 @@ without a clear reason specified.
 
 # Case Study: the Rise of the Medici
 
-```{r}
-source("R/medici_networks_demo.R")
-
+```{r }
+source("R/medici_networks.R")
 ```
 
 # Discussion
